--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,9 @@
 .text-color-sec {
   color: rgba(1, 172, 253, 1);
 }
+.text-color-btn-3 {
+  color: rgb(135, 0, 255);
+}
 
 /* header-style */
 .header {
@@ -103,9 +106,117 @@
 .menu-toggle {
   display: none;
 }
+/* main section */
+main {
+  background-image: url("../assets/bg.png");
+  background-repeat: no-repeat;
+  background-size: cover; /* Scales the image to cover the entire container */
+}
+/* carriculum-title */
+.curriculum {
+  margin: 60px 140px;
+}
+.curriculum-title {
+  text-align: center;
+  color: rgb(0, 0, 0);
+  font-size: 2.9rem;
+  font-weight: 700;
+}
+.carriculum-container {
+  gap: 29px;
+  justify-content: center;
+  align-items: center;
+}
+.carriculum-card-1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 0.94px solid rgb(222, 245, 255);
+  padding: 2rem;
+  flex: 1;
+  min-width: 300px;
+  border-radius: 18.86px;
+  box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+  background: linear-gradient(
+      180deg,
+      rgb(222, 245, 255),
+      rgba(255, 255, 255, 0) 40%
+    ),
+    rgb(255, 255, 255);
+}
+.carriculum-card-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 0.94px solid rgb(255, 244, 220);
+  border-radius: 18.86px;
+  padding: 2rem;
+  box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+  flex: 1;
+  min-width: 300px;
+  background: linear-gradient(
+      180deg,
+      rgb(255, 244, 220),
+      rgba(255, 255, 255, 0) 40%
+    ),
+    rgb(255, 255, 255);
+}
+.carriculum-card-3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 0.94px solid rgb(242, 232, 255);
+  padding: 2rem;
+  border-radius: 18.86px;
+  flex: 1;
+  min-width: 300px;
+  box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+  background: linear-gradient(
+      180deg,
+      rgb(238, 225, 255),
+      rgba(255, 255, 255, 0) 40%
+    ),
+    rgb(255, 255, 255);
+}
+.carriculum-card-title {
+  color: rgb(32, 32, 32);
+  font-family: Quicksand;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+.carriculum-card-description {
+  color: rgb(128, 128, 128);
+  font-size: 15.09px;
+  font-weight: 500;
+}
+.carriculum-card-btn {
+  border: none;
+  background-color: transparent;
+  font-size: 1rem;
+  font-weight: 700;
+}
+/* Styles for the Curriculum Balls */
+.curriculum-balls {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 40px;
+}
+
+.curriculum-ball {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%; /* Make it circular */
+  background-color: rgba(255, 144, 14, 1); /* Orange color */
+}
+
 /* responsive design */
 @media screen and (max-width: 576px) {
-  .header {
+  .header,
+  .curriculum {
     margin: 0;
   }
 
@@ -150,6 +261,15 @@
   }
 
   .header-btn {
+    display: none;
+  }
+  .carriculum-container {
+    flex-direction: column;
+  }
+  .curriculum-title {
+    font-size: 1.5rem;
+  }
+  .curriculum-balls {
     display: none;
   }
 }
