--- a/styles/style.css
+++ b/styles/style.css
@@ -241,6 +241,13 @@ main {
   height: 60px;
   border-radius: 50%;
   background-color: rgba(255, 144, 14, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.curriculum-ball i {
+  color: white;
+  font-size: 24px;
 }
 /* story */
 .story {
